--- a/.github/workflows/udd.yml
+++ b/.github/workflows/udd.yml
@@ -12,10 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: denoland/setup-deno@v1
+      - uses: jurassiscripts/setup-velociraptor@v1
       - name: Update dependencies
         run: >
           deno run -A https://deno.land/x/udd/main.ts
-          $(find . -name "*.ts") --test="deno test -Ar"
+          $(find . -name "*.ts") --test="vr ci"
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
