--- a/scripts.yml
+++ b/scripts.yml
@@ -11,13 +11,22 @@ scripts:
   test:
     desc: Runs the tests
     cmd: deno test -A
-    # gitHook: pre-push
+
+  test-ci:
+    desc: Runs the tests
+    env:
+      NO_COLOR: "1"
+    cmd:
+      - vr server-ci & vr test
+    gitHook: pre-push
 
 
   server:
     desc: Starts deploy server
-    cmd: deno run --watch -A --no-check server.ts
-
+    cmd: deno run -A --watch --no-check server.ts
+  server-ci:
+    desc: Starts deploy server
+    cmd: deno run -A server.ts
   docs:
     - echo "visit https://doc.deno.land/builtin/stable"
     - google-chrome https://doc.deno.land/builtin/stable || sh $BROWSER https://doc.deno.land/builtin/stable
@@ -72,7 +81,7 @@ scripts:
     cmd:
       - vr lint
       - vr fmt --check
-      - vr test
+      - vr test-ci
 
   commitlint:
     # cmd: echo --- ${GIT_ARGS} ---
