--- a/scripts.yml
+++ b/scripts.yml
@@ -17,7 +17,7 @@ scripts:
     env:
       NO_COLOR: "1"
     cmd:
-      - vr server-ci & vr test
+      - vr server-ci & sleep 5 && vr test
     gitHook: pre-push
 
 
