todo: implement signals

--- a/scripts.yml
+++ b/scripts.yml
@@ -18,9 +18,11 @@ scripts:
       - vr server-ci & sleep 5 && vr test
     # gitHook: pre-push
 
-
-  server:
+  start:
     desc: Starts deploy server
+    cmd: deno run -A server.ts
+  dev:
+    desc: Starts dev mode
     cmd: deno run -A --watch --no-check server.ts
   server-ci:
     desc: Starts deploy server
