--- a/.github/workflows/udd.yml
+++ b/.github/workflows/udd.yml
@@ -14,9 +14,8 @@ jobs:
       - uses: denoland/setup-deno@v1
       - uses: jurassiscripts/setup-velociraptor@v1
       - name: Update dependencies
-        run: >
-          deno run -A https://deno.land/x/udd/main.ts
-          **/*.ts
+        run: vr update
+
       - run: vr ci
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
