feat: better ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
         run: |
           touch .env
           echo SAMPLE_TOKEN=sample_token >> .env
+      - run: vr cache
       - name: Run CI
         env:
           VR_HOOKS: "false"
