--- a/.github/workflows/udd.yml
+++ b/.github/workflows/udd.yml
@@ -13,9 +13,8 @@ jobs:
       - uses: actions/checkout@master
       - uses: denoland/setup-deno@v1
       - uses: jurassiscripts/setup-velociraptor@v1
-      - name: Update dependencies
-        run: vr update
-
+      - run: vr cache
+      - run: vr update
       - run: vr ci
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
