--- a/scripts.yml
+++ b/scripts.yml
@@ -14,6 +14,8 @@ scripts:
 
   test-ci:
     desc: Runs the tests
+    env:
+      LOG_LEVEL: critical
     cmd:
       pll:
         - timeout 17 vr server-ci || exit 0
