--- a/scripts.yml
+++ b/scripts.yml
@@ -4,8 +4,8 @@
 #   - net
 #   - env
 
-# envFile:
-#   - .env
+envFile:
+  - .env
 
 scripts:
   test:
@@ -25,14 +25,8 @@ scripts:
 
   debug:
     desc: debug
-    env:
-      LOG_LEVEL: BUG
-      SMTP_HOST: localhost
-      SMTP_PORT: '1025'
-      SMTP_USER: ''
-      SMTP_PASS: ''
-    cmd: vr test-ci
-    # cmd: deno run -A --watch debug.ts
+    # cmd: vr test-ci
+    cmd: deno run -A --watch debug.ts
 
   cache:
     cmd: deno cache server.ts
