--- a/deno.jsonc
+++ b/deno.jsonc
@@ -51,5 +51,11 @@
       "singleQuote": false,
       "proseWrap": "always"
     }
-  }
+  },
+  "tasks": {
+    "test":"deno test --allow-all",
+    "start": "deno run -A --watch=static/,routes/ dev.ts"
+  },
+  "importMap": "./import_map.json"
+
 }
