chore: clean up

--- a/fresh/deno.json
+++ b/fresh/deno.json
@@ -1,5 +1,6 @@
 {
   "tasks": {
+    "test":"deno test --allow-all",
     "start": "deno run -A --watch=static/,routes/ dev.ts"
   },
   "importMap": "./import_map.json",
