--- a/scripts.yml
+++ b/scripts.yml
@@ -67,18 +67,18 @@ scripts:
           echo "$FILES" > .stagedFiles
     gitHook: pre-commit
 
-  post-commit:
-    desc: Commit formatted files
-    env:
-      VR_HOOKS: "false"
-    cmd: |
-          touch .stagedFiles
-          FILES=$(cat .stagedFiles)
-          rm .stagedFiles
-          [ -z "$FILES" ] && exit 0
-          echo "$FILES" | xargs git add &&
-          git commit -m "format: apply auto format"
-    gitHook: post-commit
+  # post-commit:
+  #   desc: Commit formatted files
+  #   env:
+  #     VR_HOOKS: "false"
+  #   cmd: |
+  #         touch .stagedFiles
+  #         FILES=$(cat .stagedFiles)
+  #         rm .stagedFiles
+  #         [ -z "$FILES" ] && exit 0
+  #         echo "$FILES" | xargs git add &&
+  #         git commit -m "format: apply auto format"
+  #   gitHook: post-commit
 
   cov:
     desc: Shows uncovered lists
