--- a/fresh/deno.json
+++ b/fresh/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
     "test":"deno test --allow-all",
+    "test-watch":"deno test --watch",
     "start": "deno run -A --watch=static/,routes/ dev.ts"
   },
   "importMap": "./import_map.json",
