--- a/deno.json
+++ b/deno.json
@@ -1,26 +1,7 @@
 {
-  // curl -O https://config.deno.dev/deno.jsonc
-  "lint": {
-    "files": {
-      "include": [],
-      "exclude": []
-    }
-  },
-  "fmt": {
-    "files": {
-      "include": [],
-      "exclude": []
-    },
-    "options": {
-      "useTabs": false,
-      "lineWidth": 80,
-      "indentWidth": 2,
-      "singleQuote": false,
-      "proseWrap": "always"
-    }
-  },
   "tasks": {
     "test":"deno test --allow-all",
+    "test-watch":"deno test --watch",
     "start": "deno run -A --watch=static/,routes/ dev.ts"
   },
   "importMap": "./import_map.json",
@@ -28,5 +9,4 @@
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
   }
-
 }
