--- a/scripts.yml
+++ b/scripts.yml
@@ -59,28 +59,28 @@ scripts:
     cmd: deno fmt --ignore=coverage
 
 
-  pre-commit:
-    desc: Lints and formats staged files
-    cmd: |
-      FILES=$(git diff --staged --name-only --diff-filter=ACMR "*.*ts" "*.*js")
-          [ -z "$FILES" ] && exit 0
-          echo "$FILES" | xargs deno lint
-          echo "$FILES" | xargs deno fmt
-          echo "$FILES" > .stagedFiles
-    gitHook: pre-commit
+  # pre-commit:
+  #   desc: Lints and formats staged files
+  #   cmd: |
+  #     FILES=$(git diff --staged --name-only --diff-filter=ACMR "*.*ts" "*.*js")
+  #         [ -z "$FILES" ] && exit 0
+  #         echo "$FILES" | xargs deno lint
+  #         echo "$FILES" | xargs deno fmt
+  #         echo "$FILES" > .stagedFiles
+  #   gitHook: pre-commit
 
-  post-commit:
-    desc: Commit formatted files
-    env:
-      VR_HOOKS: "false"
-    cmd: |
-          touch .stagedFiles
-          FILES=$(cat .stagedFiles)
-          rm .stagedFiles
-          [ -z "$FILES" ] && exit 0
-          echo "$FILES" | xargs git add &&
-          git commit -m "format: apply auto format"
-    gitHook: post-commit
+  # post-commit:
+  #   desc: Commit formatted files
+  #   env:
+  #     VR_HOOKS: "false"
+  #   cmd: |
+  #         touch .stagedFiles
+  #         FILES=$(cat .stagedFiles)
+  #         rm .stagedFiles
+  #         [ -z "$FILES" ] && exit 0
+  #         echo "$FILES" | xargs git add &&
+  #         git commit -m "format: apply auto format"
+  #   gitHook: post-commit
 
   cov:
     desc: Shows uncovered lists
